--- a/src/app.css
+++ b/src/app.css
@@ -6,30 +6,15 @@
   color: #333;
 }
 
-button {
-  border: none;
-  border-radius: 6px;
-  background-color: blue;
-  color: whitesmoke;
-  padding: 10px;
-  margin: 10px;
-  font-weight: 900;
-}
-.value-list {
-  list-style-type: none;
-  display: block;
-  margin-block-start: 0em;
-  margin-block-end: 0em;
-  margin-inline-start: 0px;
-  margin-inline-end: 0px;
-  padding-inline-start: 0px;
+.App {
+  padding: 15px;
 }
 
 .left-section {
   position: relative;
 }
 .value-list-item {
-  padding: 0.5rem;
+  padding: 10px;
   border-bottom: 1px solid #afafaf36;
 }
 .value-list-item label {
@@ -46,42 +31,6 @@ input.value-list-checkbox {
 input[type="checkbox"] {
   float: right;
   display: inline-block;
-}
-
-.valueWrapper {
-  height: 100%;
-  width: 95%;
-  background-color: whitesmoke;
-  padding: 15px;
-  border-radius: 6px;
-  margin-top: 25px;
-
-  height: 100%;
-  width: 95%;
-  background-color: whitesmoke;
-  border-radius: 6px;
-}
-
-h3.valueWrapper {
-  text-align: center;
-}
-
-.next {
-  width: 100%;
-  background-color: blue;
-  border: 0px;
-  border-bottom-right-radius: 6px;
-  border-bottom-left-radius: 6px;
-  padding: 5px;
-}
-.next p {
-  font-weight: 1000;
-  font-size: 1rem;
-  color: #f2f2f2;
-}
-
-.div {
-  font-family: sans-serif;
 }
 
 .navbar {
@@ -108,9 +57,6 @@ h3.valueWrapper {
   color: #f1356d;
 }
 .content {
-  max-width: 600px;
-  margin: 40px auto;
-  padding: 20px;
 }
 
 .topCard,
@@ -133,10 +79,6 @@ h3.valueWrapper {
   font-size: 1.5rem;
 }
 
-.valueSorterWrapper {
-  width: 90%;
-}
-
 .bottomCardWrapper {
 }
 
@@ -152,15 +94,8 @@ h3.valueWrapper {
 
 .show {
   visibility: visible;
-
   text-align: left;
   width: 90%;
-  margin: 0px;
-  font-weight: 500;
-  background-color: whitesmoke;
-  color: #333;
-
-  display: inline-block;
   padding: 15px;
   border: 1px solid grey;
   border-radius: 6px;
