--- a/src/app.css
+++ b/src/app.css
@@ -73,9 +73,10 @@ input[type="checkbox"] {
 }
 
 .app {
-  background-color: "rgb(241 242 255 / 23%)";
+  background-color: white;
   max-width: 852px;
   margin: auto;
+  height: 100vh;
 }
 
 .lala {
@@ -118,5 +119,11 @@ input[type="checkbox"] {
 
 .padderTop {
   padding-top: 35px;
+
 }
 
+.appWrapper {
+  height: 100vh;
+  width: 100vw;
+  background-color: rgb(240, 240, 240);
+}
