--- a/src/app.css
+++ b/src/app.css
@@ -127,3 +127,9 @@ input[type="checkbox"] {
   width: 100vw;
   background-color: rgb(240, 240, 240);
 }
+
+html {
+  height: 100vh;
+  width: 100vw;
+  background-color: rgb(240, 240, 240);
+}
