--- a/src/app.css
+++ b/src/app.css
@@ -7,7 +7,7 @@
   border-top-left-radius: 0px;
   border-top-left-radius: 0px;
   padding: 15px;
-  width: 97%;
+  width: 95%;
   margin: auto;
 }
 
@@ -18,36 +18,34 @@
   border-radius: 6px;
   background-color: #42a5f5;
   color: white;
-  width: 97%;
+  width: 95%;
   margin: auto;
 }
- 
+
 .value-list-item label {
   width: 95%;
 
   display: inline-block;
 }
 input.value-list-checkbox {
-  width: 1.2rem;
-  height: 1.2rem;
-  margin-bottom: 0px;
+  width: 2rem;
+  height: 2em;
+  padding: 10px;
 }
 
 input[type="checkbox"] {
   position: absolute;
-  right: 15px;
+  right: 36px;
   vertical-align: middle;
   background-color: white;
   color: #1976d2;
 }
 
 .show {
-
   visibility: visible;
   opacity: 100%;
   transition: opacity 1s, border 1s;
   text-align: left;
- 
 }
 
 .relative {
@@ -149,7 +147,7 @@ input[type="checkbox"] {
 
 html {
   height: 100vh;
-  width: 100vw;
+  width: 100%;
 }
 
 .white {
@@ -222,11 +220,11 @@ html {
 
 .blueWhiteAvatar {
   background-color: "primary.main";
-   color: "blue";
+  color: "blue";
 }
 
 #white {
-background-color: white;
+  background-color: white;
 }
 
 .MuiDivider-vertical-white {
@@ -236,4 +234,11 @@ background-color: white;
 .hiddenCard {
   display: none;
   background-color: green;
+}
+
+.bottomRighButton {
+  float: "right";
+  margin-bottom: "15px";
+  margin-top: "45px";
+  margin-right: "15px";
 }
