--- a/src/app.css
+++ b/src/app.css
@@ -3,22 +3,22 @@
 
 .value-list-item {
   border-bottom: 1px solid #afafaf36;
-  border-radius: 6px; 
+  border-radius: 6px;
   width: 95%;
   margin: auto;
-  margin-top: 10px;
-  margin-bottom: 10px;
+  padding: 15px;
+  margin-top: 15px;
 }
 
 .picked {
   border-bottom: 1px solid #afafaf36;
   border-radius: 6px;
-  background-color: #42a5f5;
-  color: white;
+  background-color: #b3bbb51e;
+
   width: 95%;
   margin: auto;
-  margin-top: 10px;
-  margin-bottom: 10px;
+  padding: 15px;
+  margin-top: 15px;
 }
 
 .value-list-item label {
@@ -31,12 +31,18 @@ input.value-list-checkbox {
   padding: 10px;
 }
 
-
+input[type="checkbox"] {
+  position: absolute;
+  right: 36px;
+  vertical-align: middle;
+  background-color: white;
+  color: #1976d2;
+}
 
 .show {
   visibility: visible;
-
-  
+  opacity: 100%;
+  transition: opacity 1s;
   text-align: left;
 }
 
@@ -50,13 +56,14 @@ input.value-list-checkbox {
 .hidden {
   position: absolute;
   visibility: hidden;
+  opacity: 0;
   margin-left: auto;
   margin-right: auto;
   top: 0;
   left: 0;
   right: 0;
   text-align: center;
-
+  border: 100px solid green;
 }
 
 .topCardContainer {
@@ -124,7 +131,9 @@ input.value-list-checkbox {
 }
 
 .appBarPadder {
-  height: 85px;
+  height: 79px;
+  width: 100%;
+  max-width: 853px;
 }
 
 .padderTop {
@@ -142,10 +151,6 @@ html {
 }
 
 .white {
-  background-color: white;
-}
-
-.css-xdmu94-MuiContainer-root {
   background-color: white;
 }
 
@@ -232,4 +237,8 @@ html {
   margin-bottom: "15px";
   margin-top: "45px";
   margin-right: "15px";
+}
+
+body {
+  background-color: #f1faee;
 }
