--- a/src/app.css
+++ b/src/app.css
@@ -1,4 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
 /* base styles */
 
 .value-list-item {
@@ -43,15 +42,13 @@ input[type="checkbox"] {
   opacity: 100%;
   transition: opacity 1s;
   text-align: left;
+  position: relative;
 }
 
 .relative {
   position: relative;
-  max-height: 200px;
-  max-width: 450px;
-  margin-left: auto;
-  margin-right: auto;
 }
+
 .hidden {
   position: absolute;
   visibility: hidden;
@@ -71,6 +68,7 @@ input[type="checkbox"] {
 
 .noStyleList {
   list-style: none;
+  text-align: left;
 }
 
 .links a {
@@ -89,9 +87,6 @@ input[type="checkbox"] {
 }
 
 .app {
-  max-width: 852px;
-  margin: auto;
-  height: 100vh;
 }
 
 .lala {
@@ -138,9 +133,9 @@ input[type="checkbox"] {
   padding-top: 35px;
 }
 
-.appWrapper {
-  height: 100vh;
-  width: 100vw;
+.textWrapper {
+  max-width: 700px;
+  margin: auto;
 }
 
 html {
@@ -241,44 +236,45 @@ body {
   background-color: #f1faee;
 }
 
-.primary {
-  background-color: #7a7978;
+.notDoneProgress {
+  background-color: #6a7a83;
 }
 
-.success {
-  background-color: #1b521f;
+.doneProgress {
+  background-color: #45644e;
+  padding-bottom: "17px";
+  padding-top: "17px";
 }
 
 .text {
-  max-width: "725px";
+  max-width: "445px";
   margin: "auto";
 }
-
 
 .inverted-border-radius-left::before {
   content: "";
   position: absolute;
-  
+
   background-color: transparent;
   bottom: -50px;
   left: 0;
   height: 50px;
   width: 20px;
   border-top-left-radius: 20px;
-  box-shadow: 0 -20px 0 0 #455964; /* This is where the magic happens! */
+  box-shadow: 0 -20px 0 0 #ffffff; /* This is where the magic happens! */
 }
 
 .inverted-border-radius-right::before {
   content: "";
   position: absolute;
-  
+
   background-color: transparent;
   bottom: -50px;
   right: 0;
   height: 50px;
   width: 20px;
   border-top-right-radius: 20px;
-  box-shadow:  0 -20px 0 0   #455964; /* This is where the magic happens! */
+  box-shadow: 0 -20px 0 0 #ffffff; /* This is where the magic happens! */
 }
 
 .diagonal-box {
@@ -287,22 +283,103 @@ body {
 
 .diagonal-box::before {
   height: 500px;
- position: absolute;
-   top: 0;
-   right: 0;
-   left: 0;
-   bottom: 0;
-   background-image: linear-gradient(45deg, #654ea3, #eaafc8); 	
-   transform: skewY(-11deg);
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  background-image: linear-gradient(45deg, #654ea3, #eaafc8);
+  transform: skewY(-11deg);
 }
 
 .content {
- max-width: 50em;
-   margin: 0 auto;
-   position: relative;
+  max-width: 50em;
+  margin: 0 auto;
+  position: relative;
 }
 
-
 .css-1t29gy6-MuiToolbar-root {
-   min-height: 34px;
+  min-height: 34px;
+}
+
+.shapedividers_com-2737 {
+  overflow: hidden;
+  position: relative;
+  min-height: 200px;
+}
+.shapedividers_com-2737::before {
+  content: "";
+  font-family: "shape divider from ShapeDividers.com";
+  position: absolute;
+  bottom: -1px;
+  left: -1px;
+  right: -1px;
+  top: -1px;
+  z-index: 3;
+  pointer-events: none;
+  background-repeat: no-repeat;
+  background-size: 100% 88px;
+  background-position: 50% 100%;
+  background-image: url('data:image/svg+xml;charset=utf8, <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 2.646 0.529" preserveAspectRatio="none"><g fill="%23fbd8c2"><path d="M2.646.53H0L1.323.264z"/><path d="M2.646.53L1.323 0 0 .53z" opacity=".66"/></g></svg>');
+}
+
+@media (min-width: 768px) {
+  .shapedividers_com-2737::before {
+    background-size: 100% 88px;
+    background-position: 50% 100%;
+  }
+}
+
+@media (min-width: 1025px) {
+  .shapedividers_com-2737::before {
+    bottom: -0.1vw;
+    left: -0.1vw;
+    right: -0.1vw;
+    top: -0.1vw;
+    background-size: 100% 88px;
+    background-position: 50% 100%;
+    background-image: url('data:image/svg+xml;charset=utf8, <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 2.646 0.529" preserveAspectRatio="none"><g fill="%23455a64"><path d="M2.646.53H0L1.323.264z"/><path d="M2.646.53L1.323 0 0 .53z" opacity=".66"/></g></svg>');
+  }
+}
+@media (min-width: 2100px) {
+  .shapedividers_com-2737::before {
+    background-size: 100% calc(2vw + 88px);
+  }
+}
+
+.navBarLogo {
+  height: 42px;
+  float: left;
+  margin-top: 15px;
+  margin-left: 15px;
+}
+
+.headerLogo {
+  height: 70px;
+}
+
+.topHeader {
+  height: 550px;
+}
+
+.nav {
+  transition: all 0.1s linear;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 2000;
+  padding: 20px;
+}
+.false {
+  padding: 0px;
+}
+.scrollNav {
+  position: fixed;
+  top: 0;
+  transition: all 0.5s ease-in;
+  z-index: 2000;
+  background: #ffffff;
+  width: 100%;
+  padding: 0;
 }
