--- a/src/app.css
+++ b/src/app.css
@@ -241,7 +241,7 @@ body {
 }
 
 .doneProgress {
-  background-color: #45644e;
+  background-color: #2e7d31;
   padding-bottom: "17px";
   padding-top: "17px";
 }
